Implement viausl and layout Brand structure

--- a/src/app/pages/model/modellist/modellist.component.html
+++ b/src/app/pages/model/modellist/modellist.component.html
@@ -7,7 +7,7 @@
                         <h2>Model</h2>
                     </div>
                     <div class="col-sm-2">
-                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>Add New</span></a>
+                        <a href="/modeledit" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>Add New</span></a>
                     </div>
                 </div>
             </div>
