--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+
+textarea,
+input {
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+  font-size: 3em;
+  font-weight: bold;
+  border: none;
+  border-bottom: 5px solid #979797;
+  resize: none;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
+.error {
+  color: #ff0000;
+}
+
+small {
+  color: #979797;
+}
+
+button {
+  width: 100px;
+  margin: 0 25px;
+}
+
+.font-title {
+  font-size: 3em;
+  font-weight: bold;
+}
