--- a/src/app/pages/brand/brandlist/brandlist.component.html
+++ b/src/app/pages/brand/brandlist/brandlist.component.html
@@ -1,37 +1,35 @@
 <div class="container-xl">
-    <div class="table-responsive">
-        <div class="table-wrapper">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-10">
-                        <h2>Brand</h2>
-                    </div>
-                    <div class="col-sm-2">
-                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>Add New</span></a>
-                    </div>
-                </div>
+    <div id="main" class="container-fluid">
+        <div id="top" class="row">
+            <div class="col-sm-10">
+                <h2>Brand</h2>
             </div>
+            <div class="col-sm-2">
+                <a href="/brandedit" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span> Add New</span></a>
+            </div>
+        </div>  
+        <div id="list" class="row">
+            
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th></th>
                         <th>Name</th>						
-                        <th>Last Updated Date</th>
-                        <th>Action</th>
+                        <th style="text-align: center;">Last Updated Date</th>
+                        <th style="text-align: center;">Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let brand of brands | async">
-                        <td></td>
-                        <td><a>{{ brand.description }}</a></td>
-                        <td>{{ brand.lastUpdateDate | date:'short' }}</td>
-                        <td>
-                            <a href="#" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>
-                            <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
+                        <td style="width: 33%;"><a>{{ brand.description }}</a></td>
+                        <td style="width: 33%; text-align: center">{{ brand.lastUpdateDate | date:'short' }}</td>
+                        <td style="width: 33%; text-align: center">
+                            <button type="button" class="btn btn-warning btn-sm" (click)="brandEdit(brand.id)"><i class="material-icons">&#xE8B8;</i></button>
+                            <button type="button" class="btn btn-danger btn-sm" (click)="brandDelete(brand.id)"><i class="material-icons">&#xE5C9;</i></button>
                         </td>
                     </tr>
                 </tbody>
             </table>
-        </div>
-    </div>
+        </div> 
+    </div> 
 </div>
+
