--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,21 @@ th {
 td {
   vertical-align: middle;
 }
+
+.table-fixed thead {
+  width: 100%;
+}
+
+.table-fixed tbody {
+  height: 360px;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+  display: block;
+}
+.table-fixed tbody td, .table-fixed thead > tr> th {
+  float: left;
+  border-bottom-width: 0;
+}
