--- a/src/app/pages/brand/brandlist/brandlist.component.html
+++ b/src/app/pages/brand/brandlist/brandlist.component.html
@@ -9,30 +9,31 @@
             </div>
         </div>  
         <div id="list" class="row">
-            
             <table class="table table-striped table-hover">
-                <thead>
+                <thead class="thead-dark">
                     <tr>
-                        <th>NAME</th>						
-                        <th style="text-align: center;">LAST UPDATE</th>
-                        <th style="text-align: center;">ACTION</th>
+                        <th style="width: 40%;">NAME</th>						
+                        <th style="text-align: center; width: 40%;">LAST UPDATE</th>
+                        <th style="text-align: center; width: 20%;">ACTION</th>
                     </tr>
                 </thead>
+            </table>
+            <table class="table table-striped table-hover table-fixed">
                 <tbody>
                     <tr *ngFor="let brand of brands | async">
                         <td style="width: 40%; vertical-align: middle;"><a>{{ brand.description }}</a></td>
                         <td style="width: 40%; text-align: center; vertical-align: middle;">{{ brand.lastUpdateDate | date:'short' }}</td>
                         <td style="width: 20%; text-align: center; vertical-align: middle;">
                             <div ontouchstart="">
-                                <a (click)="brandEdit(brand.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
+                                <a (click)="edit(brand.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
                                 &nbsp;&nbsp;
-                                <a (click)="brandDelete(brand.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
+                                <a (click)="delete(brand.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
                               </div>
                         </td>
                     </tr>
                 </tbody>
             </table>
+
         </div> 
     </div> 
 </div>
-
