--- a/src/app/pages/model/modellist/modellist.component.html
+++ b/src/app/pages/model/modellist/modellist.component.html
@@ -1,41 +1,41 @@
 <div class="container-xl">
-    <div class="table-responsive">
-        <div class="table-wrapper">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-10">
-                        <h2>Model</h2>
-                    </div>
-                    <div class="col-sm-2">
-                        <a href="/modeledit" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>Add New</span></a>
-                    </div>
-                </div>
+    <div id="main" class="container-fluid">
+        <div id="top" class="row">
+            <div class="col-sm-11">
+                <h2>Model</h2>
             </div>
+            <div class="col-sm-1" style="padding-top: 40px;">
+                <a href="/modeladd" class="btn btn-primary"><i class="material-icons">&#xE147;</i> <span></span></a>
+            </div>
+        </div>  
+        <div id="list" class="row">
             <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Name</th>	
-                        <th>Type</th>
-                        <th>Brand</th>
-                        <th>Last Updated Date</th>
-                        <th>Action</th>
+                <thead class="thead-dark">
+                    <tr style="text-align: center;">
+                        <th style="width: 20%;">NAME</th>	
+                        <th style="text-align: center; width: 20%;">TYPE</th>
+                        <th style="text-align: center; width: 20%;">BRAND</th>
+                        <th style="text-align: center; width: 20%;">LAST UPDATE</th>
+                        <th style="text-align: center; width: 20%;">ACTION</th>
                     </tr>
                 </thead>
+            </table>
+            <table class="table table-striped table-hover table-fixed">
                 <tbody>
-                    <!-- <tr *ngFor="let brand of brands | async">
-                        <td></td>
-                        <td><a>{{ brand.description }}</a></td>
-                        <td><a>{{ brand.description }}</a></td>
-                        <td><a>{{ brand.description }}</a></td>
-                        <td>{{ brand.lastUpdateDate | date:'short' }}</td>
-                        <td>
-                            <a href="#" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>
-                            <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
+                    <tr *ngFor="let model of models | async">
+                        <td style="width: 40%; vertical-align: middle;"><a>{{ model.description }}</a></td>
+                        <td style="width: 40%; text-align: center; vertical-align: middle;">{{ model.lastUpdateDate | date:'short' }}</td>
+                        <td style="width: 20%; text-align: center; vertical-align: middle;">
+                            <div ontouchstart="">
+                                <a (click)="edit(brand.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
+                                &nbsp;&nbsp;
+                                <a (click)="delete(brand.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
+                              </div>
                         </td>
-                    </tr> -->
+                    </tr>
                 </tbody>
             </table>
-        </div>
-    </div>
+
+        </div> 
+    </div> 
 </div>
