--- a/src/app/pages/vehicle/vehicleadd/vehicleadd.component.html
+++ b/src/app/pages/vehicle/vehicleadd/vehicleadd.component.html
@@ -1,7 +1,7 @@
 <div class="container-xl">
     <div class="table-title">
         <div class="row">
-            <h2>Model</h2>
+            <h2>Vehicle</h2>
         </div>
     </div>
     <form (ngSubmit)="onSubmit()">
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-sm">
                     <small>Description</small>
-                    <input type="text" class="form-control" id="description" name="description" required [(ngModel)]="model.description" maxlength="20">
+                    <input type="text" class="form-control" id="description" name="description" required [(ngModel)]="vehicle.description" maxlength="20">
                 </div>
             </div>
             <br>
