--- a/src/app/pages/vehicle/vehiclelist/vehiclelist.component.html
+++ b/src/app/pages/vehicle/vehiclelist/vehiclelist.component.html
@@ -1,43 +1,59 @@
 <div class="container-xl">
-    <div class="table-responsive">
-        <div class="table-wrapper">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-10">
-                        <h2>Vehicle</h2>
-                    </div>
-                    <div class="col-sm-2">
-                        <a href="/vehicleedit" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>Add New</span></a>
-                    </div>
-                </div>
+    <div id="main" class="container-fluid">
+        <div id="top" class="row">
+            <div class="col-sm-11">
+                <h2>Vehicle</h2>
             </div>
+            <div class="col-sm-1" style="padding-top: 40px;">
+                <a href="/vehicleadd" class="btn btn-primary"><i class="material-icons">&#xE147;</i> <span></span></a>
+            </div>
+        </div>  
+        <div id="list" class="row">
             <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Name</th>
-                        <th>Year Build</th>					
-                        <th>Year Model</th>
-                        <th>Model</th>
-                        <th>Last Updated Date</th>
-                        <th>Action</th>
+                <thead class="thead-dark">
+                    <tr style="text-align: center;">
+                        <th style="width: 20%; vertical-align: middle;">NAME<br><small></small></th>	
+                        <th style="text-align: center; width: 10%;">BUILD<br><small>YEAR</small></th>
+                        <th style="text-align: center; width: 10%;">MODEL<br><small>YEAR</small></th>
+                        <th style="text-align: center; width: 10%; vertical-align: middle;">MODEL</th>
+                        <th style="text-align: center; width: 15%; vertical-align: middle;">BRAND</th>
+                        <th style="text-align: center; width: 15%; vertical-align: middle;">LAST UPDATE</th>
+                        <th style="text-align: center; width: 20%; vertical-align: middle;">ACTION</th>
                     </tr>
                 </thead>
+            </table>
+            <table class="table table-striped table-hover table-fixed">
                 <tbody>
+                    <tr>
+                        <td style="width: 20%;">Name</td>
+                        <td style="width: 10%; text-align: center; vertical-align: middle;">2020</td>
+                        <td style="width: 10%; text-align: center; vertical-align: middle;">2021</td>
+                        <td style="width: 10%; text-align: center; vertical-align: middle;">FXX</td>
+                        <td style="width: 15%; text-align: center; vertical-align: middle;">VOLVO</td>
+                        <td style="width: 15%; text-align: center; vertical-align: middle;">26/01/2021 15:27</td>
+                        <td style="width: 20%; text-align: center; vertical-align: middle;">
+                            <!-- <div ontouchstart="">
+                                <a (click)="edit(vehicle.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
+                                &nbsp;&nbsp;
+                                <a (click)="delete(vehicle.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
+                            </div> -->
+                        </td>
+                    </tr>
+
                     <!-- <tr *ngFor="let brand of brands | async">
-                        <td></td>
-                        <td><a>{{ brand.description }}</a></td>
-                        <td><a>{{ brand.description }}</a></td>
-                        <td><a>{{ brand.description }}</a></td>
-                        <td><a>{{ brand.description }}</a></td>
-                        <td>{{ brand.lastUpdateDate | date:'short' }}</td>
-                        <td>
-                            <a href="#" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>
-                            <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
+                        <td style="width: 40%; vertical-align: middle;"><a>{{ brand.description }}</a></td>
+                        <td style="width: 40%; text-align: center; vertical-align: middle;">{{ brand.lastUpdateDate | date:'short' }}</td>
+                        <td style="width: 20%; text-align: center; vertical-align: middle;">
+                            <div ontouchstart="">
+                                <a (click)="brandEdit(brand.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
+                                &nbsp;&nbsp;
+                                <a (click)="brandDelete(brand.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
+                              </div>
                         </td>
                     </tr> -->
                 </tbody>
             </table>
-        </div>
-    </div>
+
+        </div> 
+    </div> 
 </div>
