Adjust vehicle resgitration

--- a/src/app/pages/brand/brandedit/brandedit.component.html
+++ b/src/app/pages/brand/brandedit/brandedit.component.html
@@ -1,7 +1,7 @@
 <div class="container-xl">
     <div class="table-title">
         <div class="row">
-            <h2>Brand</h2>
+            <h2>BRAND</h2>
         </div>
     </div>
     <form (ngSubmit)="onSubmit()">
