--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,11 +12,12 @@
     <br>
     <div class="nav-search">
       <div class="row">
-        <div class="col-lg-3"></div>
+        <div class="col-lg-2"></div>
         <div class="col-sm-2"><a href="/brandlist" style="font-size: 2em;">Brand</a></div>
+        <div class="col-sm-2"><a href="/typelist" style="font-size: 2em;">Type</a></div>
         <div class="col-sm-2"><a href="/modellist" style="font-size: 2em;">Model</a></div>
         <div class="col-sm-2"><a href="/vehiclelist" style="font-size: 2em;">Vehicle</a></div>
-        <div class="col-lg-3"></div>
+        <div class="col-lg-2"></div>
       </div>
     </div>
   </div>
