--- a/src/app/pages/model/modellist/modellist.component.html
+++ b/src/app/pages/model/modellist/modellist.component.html
@@ -2,7 +2,7 @@
     <div id="main" class="container-fluid">
         <div id="top" class="row">
             <div class="col-sm-11">
-                <h2>Model</h2>
+                <h2>MODEL</h2>
             </div>
             <div class="col-sm-1" style="padding-top: 40px;">
                 <a href="/modeladd" class="btn btn-primary"><i class="material-icons">&#xE147;</i> <span></span></a>
@@ -12,24 +12,26 @@
             <table class="table table-striped table-hover">
                 <thead class="thead-dark">
                     <tr style="text-align: center;">
-                        <th style="width: 20%;">NAME</th>	
-                        <th style="text-align: center; width: 20%;">TYPE</th>
-                        <th style="text-align: center; width: 20%;">BRAND</th>
-                        <th style="text-align: center; width: 20%;">LAST UPDATE</th>
-                        <th style="text-align: center; width: 20%;">ACTION</th>
+                        <th style="width: 20%; vertical-align: middle;">NAME</th>	
+                        <th style="text-align: center; width: 20%; vertical-align: middle; ">TYPE</th>
+                        <th style="text-align: center; width: 20%; vertical-align: middle;">BRAND</th>
+                        <th style="text-align: center; width: 20%; vertical-align: middle;">LAST<br><small>UPDATE DATE</small></th>
+                        <th style="text-align: center; width: 20%; vertical-align: middle;">ACTION</th>
                     </tr>
                 </thead>
             </table>
             <table class="table table-striped table-hover table-fixed">
                 <tbody>
                     <tr *ngFor="let model of models | async">
-                        <td style="width: 40%; vertical-align: middle;"><a>{{ model.description }}</a></td>
-                        <td style="width: 40%; text-align: center; vertical-align: middle;">{{ model.lastUpdateDate | date:'short' }}</td>
+                        <td style="width: 20%; vertical-align: middle;"><a>{{ model.description }}</a></td>
+                        <td style="width: 20%; vertical-align: middle; text-align: center;"><a>{{ model.typeVehicle.description }}</a></td>
+                        <td style="width: 20%; vertical-align: middle; text-align: center;"><a>{{ model.brand.description }}</a></td>
+                        <td style="width: 20%; vertical-align: middle; text-align: center;"><a>{{ model.lastUpdateDate | date:'short' }}</a></td>
                         <td style="width: 20%; text-align: center; vertical-align: middle;">
                             <div ontouchstart="">
-                                <a (click)="edit(brand.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
+                                <a (click)="edit(model.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
                                 &nbsp;&nbsp;
-                                <a (click)="delete(brand.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
+                                <a (click)="delete(model.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
                               </div>
                         </td>
                     </tr>
