--- a/src/app/pages/type/type-edit/type-edit.component.html
+++ b/src/app/pages/type/type-edit/type-edit.component.html
@@ -10,12 +10,12 @@
             <div class="row">
                 <div class="col-sm">
                     <small>Description</small>
-                    <input type="text" class="form-control" id="description" name="description" required [(ngModel)]="brand.description" maxlength="20">
+                    <input type="text" class="form-control" id="description" name="description" required [(ngModel)]="type.description" maxlength="20">
                 </div>
             </div>
             <br>
             <div class="text-right mb-3">
-                <button type="button" class="btn btn-success btn-sm" (click)="saveBrand()">SAVE</button>
+                <button type="button" class="btn btn-success btn-sm" (click)="saveData()">SAVE</button>
                 <button type="button" class="btn btn-warning btn-sm" (click)="gotoList()">CANCEL</button>
             </div>
 
