--- a/src/app/pages/type/type-list/type-list.component.html
+++ b/src/app/pages/type/type-list/type-list.component.html
@@ -2,10 +2,10 @@
     <div id="main" class="container-fluid">
         <div id="top" class="row">
             <div class="col-sm-11">
-                <h2>BRAND</h2>
+                <h2>TYPE</h2>
             </div>
             <div class="col-sm-1" style="padding-top: 40px;">
-                <a href="/brandadd" class="btn btn-primary"><i class="material-icons">&#xE147;</i> <span></span></a>
+                <a href="/typeadd" class="btn btn-primary"><i class="material-icons">&#xE147;</i> <span></span></a>
             </div>
         </div>  
         <div id="list" class="row">
@@ -20,14 +20,14 @@
             </table>
             <table class="table table-striped table-hover table-fixed">
                 <tbody>
-                    <tr *ngFor="let brand of brands | async">
-                        <td style="width: 40%; vertical-align: middle;"><a>{{ brand.description }}</a></td>
-                        <td style="width: 40%; text-align: center; vertical-align: middle;">{{ brand.lastUpdateDate | date:'short' }}</td>
+                    <tr *ngFor="let type of types | async">
+                        <td style="width: 40%; vertical-align: middle;"><a>{{ type.description }}</a></td>
+                        <td style="width: 40%; text-align: center; vertical-align: middle;">{{ type.lastUpdateDate | date:'short' }}</td>
                         <td style="width: 20%; text-align: center; vertical-align: middle;">
                             <div ontouchstart="">
-                                <a (click)="edit(brand.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
+                                <a (click)="edit(type.id)" class="btn btn-warning"><i class="material-icons">&#xE8B8;</i> <span></span></a>
                                 &nbsp;&nbsp;
-                                <a (click)="delete(brand.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
+                                <a (click)="delete(type.id)" class="btn btn-danger"><i class="material-icons">&#xE5C9;</i> <span></span></a>
                               </div>
                         </td>
                     </tr>
