--- a/src/app/pages/vehicle/vehicleadd/vehicleadd.component.html
+++ b/src/app/pages/vehicle/vehicleadd/vehicleadd.component.html
@@ -1,7 +1,7 @@
 <div class="container-xl">
     <div class="table-title">
         <div class="row">
-            <h2>Vehicle</h2>
+            <h2>VEHICLE</h2>
         </div>
     </div>
     <form (ngSubmit)="onSubmit()">
@@ -18,6 +18,7 @@
                 <button type="button" class="btn btn-success btn-sm" (click)="saveData()">SAVE</button>
                 <button type="button" class="btn btn-warning btn-sm" (click)="gotoList()">CANCEL</button>
             </div>
+
         </div>
     </form>
 </div>
