--- a/src/app/pages/vehicle/vehiclelist/vehiclelist.component.html
+++ b/src/app/pages/vehicle/vehiclelist/vehiclelist.component.html
@@ -5,7 +5,7 @@
                 <h2>VEHICLE</h2>
             </div>
             <div class="col-sm-1" style="padding-top: 40px;">
-                <a href="/brandadd" class="btn btn-primary"><i class="material-icons">&#xE147;</i> <span></span></a>
+                <a href="/vehicleadd" class="btn btn-primary"><i class="material-icons">&#xE147;</i> <span></span></a>
             </div>
         </div>  
         <div id="list" class="row">
